tests/cases/structs/ok/union-by-wrapper-selector-match-projection.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct StreamPayload {
  value: i64,
}

struct BlockPayload {
  value: i64,
}

struct Packet {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => StreamPayload,
    block => BlockPayload,
  },
}

struct Envelope {
  packet: Packet,
}

fn score(envelope: Envelope) -> i64 {
  return match envelope.packet.security.cipher_type {
    stream => envelope.packet.fragment.0.value + 1,
    block => envelope.packet.fragment.0.value + 2,
  };
}

fn main() -> i64 {
  let envelope = Envelope {
    packet: Packet {
      security: SecurityParameters { cipher_type: block },
      fragment: block => BlockPayload { value: 40 },
    },
  };
  return score(envelope);
}
