tests/cases/structs/errors/union-by-constructor-payload-count.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct GenericStreamCipher {
  value: i64,
}

struct GenericBlockCipher {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => GenericStreamCipher,
    block => GenericBlockCipher,
  },
}

fn main() -> i64 {
  let packet = TLSCiphertext {
    security: SecurityParameters { cipher_type: stream },
    fragment: stream(GenericStreamCipher { value: 1 }, GenericStreamCipher { value: 2 }),
  };
  return 0;
}
